--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ langchain == 0.3.20
 pypdf == 5.3.1
 google-genai==1.5.0
 langchain-community==0.3.19
+azure-ai-documentintelligence==1.0.1 
+azure-ai-formrecognizer==3.3.3
